--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "facebook-login-vuejs": "^2.1.3",
+    "v-mask": "^2.2.4",
     "vue": "^2.6.11",
     "vue-flag-icon": "^1.0.6",
     "vue-google-signin-button": "^1.0.4",
